fixing overflow-x: hidden; on .page-content

--- a/geometrical-design/main.less
+++ b/geometrical-design/main.less
@@ -103,6 +103,10 @@ a.btn-main {
   // box-sizing: border-box;
 }
 
+.page-content {
+  overflow-x: hidden;
+}
+
 .above-fold {
   // Prevent overflow on mobile browsers.
   overflow-x: hidden;
